--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     border-color: var(--bs-indigo);
     color: whitesmoke;
     box-shadow: 10px 15px 25px rgba(151, 9, 116, 0.5);
+    font-size: 1.4rem;
 }
 
 .hozzadas:hover{
